- поправил регистрацию бота. - добавил логирование. - приветственное сообщение добавил в текстовый блок. - перешел на 17 джаву. - обработал ошибки. - обновил TODO;